<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P1_01_Recipe" Id="{79a47d75-5839-4eec-98f3-898150a8f442}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P1_01_Recipe
VAR
	i						:INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Recipes.Production.stPhase[1].bEnable := TRUE;
Recipes.Production_Phase_HMI.bEnable := TRUE;

Recipes.Cleaning.stPhase[1].bEnable := TRUE;
Recipes.Cleaning_Phase_HMI.bEnable := TRUE;

Recipes.Production.iActivePhase := 0;
Recipes.Cleaning.iActivePhase := 0;

FOR i := 1 TO 20 DO
	IF Recipes.Production.stPhase[i].bEnable THEN
		Recipes.Production.iActivePhase := i;
	END_IF
	
	IF NOT Recipes.Production.stPhase[i].bEnable THEN
		Recipes.Production.stPhase[i] := Recipes.Production_Empty.stPhase[0];
	END_IF
	
	IF Recipes.Cleaning.stPhase[i].bEnable THEN
		Recipes.Cleaning.iActivePhase := i;
	END_IF
	
	IF NOT Recipes.Cleaning.stPhase[i].bEnable THEN
		Recipes.Cleaning.stPhase[i] := Recipes.Cleaning_Empty.stPhase[0];
	END_IF
END_FOR]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>